--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "storybook dev -p 6006 -s public",
     "build-storybook": "storybook build -s public"
   },
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@nx/eslint": "18.0.4",
     "@storybook/addon-essentials": "^7.6.3",
     "@storybook/addon-interactions": "^7.6.3",
     "@storybook/addon-links": "^7.6.3",
@@ -43,10 +44,9 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-storybook": "^0.6.15",
-    "jest": "^28.1.1",
-    "prop-types": "^15.8.1",
-    "storybook": "^7.6.3",
+    "jest": "^28.1.3",
     "nx": "18.0.4",
-    "@nx/eslint": "18.0.4"
+    "prop-types": "^15.8.1",
+    "storybook": "^7.6.3"
   }
 }
