--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -10,21 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: npm ci
-      - uses: actions/upload-artifact@v4
+      - uses: actions/setup-node@v4
         with:
-          name: node-modules
-          path: node_modules/
+          node-version: 20
+          cache: "npm"
+      - run: npm ci
 
   tests:
     needs: install-dependencies
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
+      - uses: actions/setup-node@v4
         with:
-          name: node-modules
-          path: node_modules/
+          node-version: 20
+          cache: "npm"
+      - run: npm ci
       - run: npm test
 
   build:
@@ -32,8 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
+      - uses: actions/setup-node@v4
         with:
-          name: node-modules
-          path: node_modules/
+          node-version: 20
+          cache: "npm"
+      - run: npm ci
       - run: npm run build
