--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  install-dependencies:
+  cache-modules:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -17,7 +17,7 @@ jobs:
       - run: npm ci
 
   tests:
-    needs: install-dependencies
+    needs: cache-modules
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -29,7 +29,7 @@ jobs:
       - run: npm test
 
   build:
-    needs: tests
+    needs: cache-modules
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
