--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "jest",
     "storybook": "storybook dev -p 6006 -s public",
-    "build": "storybook build -s public"
+    "build": "storybook build"
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
