--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -28,20 +28,8 @@ jobs:
       - run: npm ci
       - run: npm test
 
-  build:
-    needs: cache-modules
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
-      - run: npm ci
-      - run: npm run build
-
   deploy-storybook:
-    needs: build
+    needs: cache-modules
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -52,7 +40,7 @@ jobs:
       - run: npm ci
 
       - name: Build Storybook
-        run: npm run build-storybook
+        run: npm run build
 
       - name: Deploy Storybook to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
