chore: check pipeline

--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Print message
-        run: echo "👋 Hello from GitHub Actions!"
+        run: npm run blabla
