--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,4 +1,4 @@
-name: Hello CI
+name: Failure CI Step
 
 on:
   push:
@@ -9,8 +9,5 @@ jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Print message
+      - name: Run command
         run: npm run blabla
