--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -6,8 +6,9 @@ on:
     #   - hello
 
 jobs:
-  say-hello:
+  secrets:
     runs-on: ubuntu-latest
+    name: Run Secrets
     steps:
       - name: Run command
         run: npm run blabla
