--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "conventional-changelog-angular": "^5.0.13",
     "conventional-recommended-bump": "^6.1.0",
     "execa": "^5.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@nx/eslint": "18.0.4",
@@ -38,7 +38,6 @@
     "@storybook/react-webpack5": "^7.6.3",
     "@storybook/test": "^7.6.3",
     "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
@@ -47,6 +46,15 @@
     "jest": "^28.1.3",
     "nx": "18.0.4",
     "prop-types": "^15.8.1",
-    "storybook": "^7.6.3"
+    "storybook": "^7.6.3",
+    "@eslint/js": "^9.36.0",
+    "@types/react": "^19.1.16",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.4",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.22",
+    "globals": "^16.4.0",
+    "vite": "^7.1.7"
   }
 }
