--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 20
           cache: "npm"
       - run: npm ci
-      - run: npm test
+      - run: npm test:affected
 
   deploy-storybook:
     needs: cache-modules
